infra/traefik/dashboard-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-auth
  namespace: traefik
spec:
  plugin:
    traefik-oidc-auth:
      Authorization:
        AssertClaims:
          - AnyOf:
              - CBC - Active member (ADM)
            Name: groups
      Provider:
        ClientId: traefik-auth
        ClientSecret: urn:k8s:secret:oidc-secret:providerClientSecret
        Url: https://auth.gewis.nl/realms/GEWISWG
        UsePkce: true
        ValidAudience: traefik-auth
      Scopes:
        - openid
        - profile
        - email
      Secret: urn:k8s:secret:oidc-secret:pluginSecret
